# craftr

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  ROADMAP.md  SECURITY.md  postinstall.sh
.cache/clangd/index/: Cliopatra.hpp.5B26336D85B6E0C2.idx  main.cpp.F350590420DF7248.idx  output_utils.cpp.8A205217888018A7.idx  output_utils.hpp.9B1233715B764AE7.idx
data/licenses/: BSD.txt
data/links/: links.json
data/locales/: ar.ini  de.ini  en.ini  es.ini  fr.ini  hi.ini  it.ini  ja.ini  ko.ini  nl.ini  pl.ini  pt.ini  ru.ini  tr.ini  zh.ini
data/metadata/: metadata.json
data/templates/system/: cpp.yaml  noob.yaml
data/templates/system/cpp/: cpp.yaml
data/templates/user/cpp/: Readme.txt  main.txt
docs/html/: index.html
docs/tr/: README.md  old_README.md
include/: Cliopatra.hpp  colors.hpp  command_utils.hpp  config.hpp  config_utils.hpp  content.hpp  content_file.hpp  date_utils.hpp  extractor.hpp  file_blueprint.hpp  file_utils.hpp  git_utils.hpp  handle_helpers.hpp  license_utils.hpp  licensetype.hpp  links.hpp  locale_utils.hpp  metadata.hpp  output_utils.hpp  paths.hpp  project.hpp  project_template.hpp  project_utils.hpp  replacer.hpp  replacer_utils.hpp  string_utils.hpp  template_engine.hpp  template_utils.hpp  validate_utils.hpp
locales/: en.ini  tr.ini
metadata/: metadata.json
src/: config_utils.cpp  date_utils.cpp  extractor.cpp  file_utils.cpp  git_utils.cpp  handle_helpers.cpp  license_utils.cpp  locale_utils.cpp  main.cpp  output_utils.cpp  project.cpp  project_template.cpp  project_utils.cpp  replacer_utils.cpp  string_utils.cpp  template_engine.cpp  template_utils.cpp  validate_utils.cpp
templates/: cpp.yaml
templates/cmake/: CMake_Template.txt
templates/config/craftr/: cpp.yaml
templates/cpp/: CMake_Template.txt  main.txt  metadata.txt
templates/licenses/: APACHE.txt  BSD.txt  MIT.txt
templates/metadata/: metadata.txt
templates/readme/: Readme.txt
